[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/makefile_launcher/play_confirm_icon.svg" type="Texture" id=1]
[ext_resource path="res://addons/makefile_launcher/make_target.gd" type="Script" id=2]
[ext_resource path="res://addons/makefile_launcher/reload_icon.svg" type="Texture" id=3]
[ext_resource path="res://addons/makefile_launcher/clear_icon.svg" type="Texture" id=4]
[ext_resource path="res://addons/makefile_launcher/play_icon.svg" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.25098, 0.270588, 0.32549, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.25098, 0.270588, 0.32549, 1 )

[node name="MakeTarget" type="MarginContainer"]
margin_right = 850.0
margin_bottom = 24.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="."]
margin_right = 850.0
margin_bottom = 31.0
rect_min_size = Vector2( 0, 31 )
custom_styles/panel = SubResource( 1 )

[node name="HSplitContainer" type="HSplitContainer" parent="Panel"]
margin_right = 850.0
margin_bottom = 31.0
dragger_visibility = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HSplitContainer"]
margin_right = 236.0
margin_bottom = 31.0

[node name="ExecButton" type="ToolButton" parent="Panel/HSplitContainer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 31.0
rect_min_size = Vector2( 32, 0 )
icon = ExtResource( 5 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExecConfirmButton" type="ToolButton" parent="Panel/HSplitContainer/HBoxContainer"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 31.0
rect_min_size = Vector2( 32, 0 )
icon = ExtResource( 1 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loading" type="Control" parent="Panel/HSplitContainer/HBoxContainer"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 31.0
rect_min_size = Vector2( 32, 31 )

[node name="LoadingIcon" type="TextureButton" parent="Panel/HSplitContainer/HBoxContainer/Loading"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 17, 15.5 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Panel/HSplitContainer/HBoxContainer"]
margin_left = 108.0
margin_right = 236.0
margin_bottom = 31.0
custom_styles/panel = SubResource( 2 )

[node name="Name" type="Label" parent="Panel/HSplitContainer/HBoxContainer/PanelContainer"]
margin_top = 8.0
margin_right = 128.0
margin_bottom = 22.0
rect_min_size = Vector2( 128, 0 )
text = "git"
clip_text = true

[node name="MarginContainer" type="MarginContainer" parent="Panel/HSplitContainer"]
margin_left = 248.0
margin_right = 850.0
margin_bottom = 31.0
size_flags_horizontal = 3
custom_constants/margin_right = 4

[node name="FieldsAndTools" type="HBoxContainer" parent="Panel/HSplitContainer/MarginContainer"]
margin_right = 598.0
margin_bottom = 31.0
size_flags_horizontal = 3

[node name="Fields" type="HBoxContainer" parent="Panel/HSplitContainer/MarginContainer/FieldsAndTools"]
margin_right = 566.0
margin_bottom = 31.0
size_flags_horizontal = 3
custom_constants/separation = 16

[node name="FieldName" type="Label" parent="Panel/HSplitContainer/MarginContainer/FieldsAndTools/Fields"]
margin_top = 8.0
margin_right = 13.0
margin_bottom = 22.0
text = "m"

[node name="FieldValue" type="LineEdit" parent="Panel/HSplitContainer/MarginContainer/FieldsAndTools/Fields"]
margin_left = 29.0
margin_top = 3.0
margin_right = 566.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 4
caret_blink = true
caret_blink_speed = 0.5

[node name="ClearButton" type="ToolButton" parent="Panel/HSplitContainer/MarginContainer/FieldsAndTools"]
margin_left = 570.0
margin_right = 598.0
margin_bottom = 31.0
icon = ExtResource( 4 )

[node name="Tween" type="Tween" parent="."]
repeat = true
playback/repeat = true
[connection signal="pressed" from="Panel/HSplitContainer/HBoxContainer/ExecButton" to="." method="_on_target_pressed"]
[connection signal="pressed" from="Panel/HSplitContainer/HBoxContainer/ExecConfirmButton" to="." method="_on_target_pressed"]
[connection signal="pressed" from="Panel/HSplitContainer/MarginContainer/FieldsAndTools/ClearButton" to="." method="clear_properties"]
